[package]
name = "cliputil"
version = "0.1.0"
edition = "2021"
authors = ["KitaSan <info@kitasan.io>"]
description = "A versatile command-line utility for executing and formatting code from the clipboard written in 100% Pure Rust"
repository = "https://github.com/cool-japan/cliputil"
readme = "README.md"
keywords = ["clipboard", "code-execution", "code-formatting", "multi-language"]
categories = ["command-line-utilities", "development-tools"]
license = "Apache-2.0"

[dependencies]
tempfile = "3.12.0"
regex = "1.10.6"
